// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiComment is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiComment testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--default wuiCommentTimeline__icon--regular"
      >
        <div
          data-wuiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="wuiCommentEvent wuiCommentEvent--regular"
  >
    <figcaption
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`WuiComment props event is rendered 1`] = `
<div
  class="wuiComment"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--default wuiCommentTimeline__icon--regular"
      >
        <div
          data-wuiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="wuiCommentEvent wuiCommentEvent--regular"
  >
    <figcaption
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        >
          commented
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`WuiComment props timelineIcon is rendered 1`] = `
<div
  class="wuiComment"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--regular"
      >
        <div
          aria-label="Mario"
          class="wuiAvatar wuiAvatar--l wuiAvatar--user"
          style="background-image:none;background-color:#f1d86f;color:#000000"
          title="Mario"
        >
          <span
            aria-hidden="true"
          >
            M
          </span>
        </div>
      </div>
    </div>
  </div>
  <figure
    class="wuiCommentEvent wuiCommentEvent--regular"
  >
    <figcaption
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`WuiComment props timestamp is rendered 1`] = `
<div
  class="wuiComment"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--default wuiCommentTimeline__icon--regular"
      >
        <div
          data-wuiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="wuiCommentEvent wuiCommentEvent--regular"
  >
    <figcaption
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        />
        <div
          class="wuiCommentEvent__headerTimestamp"
        >
          <time>
            21 days ago
          </time>
        </div>
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`WuiComment props type is rendered 1`] = `
<div
  class="wuiComment wuiComment--update"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--default wuiCommentTimeline__icon--update"
      >
        <div
          data-wuiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="wuiCommentEvent wuiCommentEvent--update"
  >
    <div
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`WuiComment renders a body 1`] = `
<div
  class="wuiComment wuiComment--hasBody"
>
  <div
    class="wuiCommentTimeline"
  >
    <div
      class="wuiCommentTimeline__content"
    >
      <div
        class="wuiCommentTimeline__icon--default wuiCommentTimeline__icon--regular"
      >
        <div
          data-wuiicon-type="user"
        />
      </div>
    </div>
  </div>
  <figure
    class="wuiCommentEvent wuiCommentEvent--regular"
  >
    <figcaption
      class="wuiCommentEvent__header"
    >
      <div
        class="wuiCommentEvent__headerData"
      >
        <div
          class="wuiCommentEvent__headerUsername"
        >
          someuser
        </div>
        <div
          class="wuiCommentEvent__headerEvent"
        />
      </div>
    </figcaption>
    <div
      class="wuiCommentEvent__body"
    >
      <p>
        This is the body.
      </p>
    </div>
  </figure>
</div>
`;
